[package]
name = "ttsearch"
version = "0.1.0"
edition = "2024"

[dependencies]
anstream = "0.6.18"
anstyle = "1.0.10"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
colorchoice-clap = "1.0.6"
csv = "1.3.1"
env_logger = "0.11.8"
homedir = "0.3.4"
lindera = "0.42.4"
lindera-tantivy = { version = "0.42.2", features = ["ipadic"] }
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
tantivy = "0.24.1"
tempfile = "3.20.0"
thiserror = "2.0.12"
zip = { version = "4.0.0", features = ["deflate"] }
